# open-agentic

./: ARCHITECTURE_REVIEW.md  Cargo.toml  README.md
android/: ui-preview.html
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/ai/openagentic/app/: ChatViewModel.kt  LocaleHelper.kt
android/app/src/main/java/ai/openagentic/app/ui/: ChatScreen.kt
android/app/src/main/res/values/: strings.xml
android/app/src/main/res/values-zh-rCN/: strings.xml
android/app/src/main/res/xml/: network_security_config.xml
crates/openclaw-agent/src/: agent.rs  decision.rs  integration.rs  lib.rs  orchestrator.rs  real_device_tools.rs  task.rs  types.rs
crates/openclaw-agent/src/collaboration/: router.rs
crates/openclaw-agent/src/evo/: adapter.rs  evo_v2_engine.rs  mod.rs  registry.rs  skill_loader.rs  skill_prompt_injector.rs
crates/openclaw-agent/src/evo/autonomous/: executor.rs
crates/openclaw-agent/src/evo/skill/: local.rs  manager.rs
crates/openclaw-agent/src/graph/: definition.rs  executor.rs
crates/openclaw-agent/src/safety/: agent_wrapper.rs  turn_limiter.rs
crates/openclaw-agent/src/squad/: memory.rs  mod.rs  registry.rs  types.rs
crates/openclaw-agent/src/task/: classifier.rs
crates/openclaw-channels/src/: factory.rs  lib.rs
crates/openclaw-channels/src/account/: manager.rs  mod.rs
crates/openclaw-cli/src/: main.rs
crates/openclaw-cli/src/commands/: gateway.rs
crates/openclaw-core/src/: config.rs
crates/openclaw-device/src/: factory.rs  lib.rs  nodes.rs  notification.rs  system.rs
crates/openclaw-device/src/heartbeat/: mod.rs
crates/openclaw-memory/src/: factory.rs  lib.rs  manager.rs  pruning.rs
crates/openclaw-sandbox/: Cargo.toml
crates/openclaw-sandbox/src/: lib.rs  sandbox.rs
crates/openclaw-sandbox/src/executor/: mod.rs
crates/openclaw-sandbox/src/leak_detector/: mod.rs
crates/openclaw-sandbox/src/rate_limit/: mod.rs
crates/openclaw-security/src/: middleware.rs
crates/openclaw-server/: Cargo.toml
crates/openclaw-server/src/: app_context.rs  config_adapter.rs  device_api.rs  gateway_service.rs  lib.rs  orchestrator.rs  service_factory.rs  squad_service.rs  vector_store_registry.rs
crates/openclaw-server/src/gateway/: auth.rs  deduplicate.rs  mod.rs  protocol.rs  reconnect.rs  two_phase.rs
crates/openclaw-server/src/ports/: adapters.rs
crates/openclaw-testing/src/: lib.rs
crates/openclaw-tools/: Cargo.toml
crates/openclaw-vector/: Cargo.toml
crates/openclaw-vector/src/: lib.rs
crates/openclaw-vector/src/store/: factory.rs  lancedb.rs  milvus.rs  mod.rs  pgvector.rs
crates/openclaw-voice/: Cargo.toml
crates/openclaw-voice/src/: lib.rs  stt.rs  voice_agent.rs
crates/openclaw-voice/src/dialogue/: intent.rs
crates/openclaw-voice/src/stt/: local.rs  streaming.rs
extensions/android/: settings.gradle.kts  ui-preview.html
extensions/android/app/: build.gradle.kts  proguard-rules.pro
extensions/android/app/src/main/java/ai/openagentic/app/: ChatViewModel.kt  MainActivity.kt
extensions/android/app/src/main/java/ai/openagentic/app/api/: ApiClient.kt  GatewayApi.kt
extensions/android/app/src/main/java/ai/openagentic/app/ui/: ChatScreen.kt
extensions/android/app/src/main/res/values/: strings.xml  themes.xml
extensions/android/app/src/main/res/values-zh-rCN/: strings.xml
