[workspace]
resolver = "2"
members = [
    "crates/openclaw-core",
    "crates/openclaw-ai",
    "crates/openclaw-memory",
    "crates/openclaw-vector",
    "crates/openclaw-channels",
    "crates/openclaw-agent",
    "crates/openclaw-voice",
    "crates/openclaw-server",
    "crates/openclaw-cli",
    "crates/openclaw-canvas",
    "crates/openclaw-browser",
    "crates/openclaw-sandbox",
    "crates/openclaw-tools",
    "crates/openclaw-device",
    "crates/openclaw-security",
    "crates/openclaw-testing",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.93"
authors = ["OpenClaw Rust Team"]
license = "MIT"
repository = "https://github.com/openclaw/openclaw-rust"

[workspace.dependencies]
# Async runtime - base features (individual crates can extend)
tokio = { version = "1.43", default-features = false, features = [
    "rt",
    "sync",
    "macros",
] }
async-trait = "0.1"
futures = "0.3"
async-stream = "0.3"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_qs = "0.12"
serde_yaml = "0.9"

# Testing
tempfile = "3.8"

# Error handling
thiserror = "2.0"
anyhow = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Configuration
config = "0.15"

# Time
chrono = { version = "0.4", features = ["serde"] }

# UUID
uuid = { version = "1.12", features = ["v4", "serde"] }

# Regex
regex = "1.11"

# Encryption
aes-gcm = "0.10"
sha2 = "0.10"
rand = "0.8"

# Encoding
base64 = "0.22"

# Clipboard
arboard = "3.4"

# HTTP client
reqwest = { version = "0.12", features = ["json", "rustls-tls", "multipart"] }

# HTTP server
axum = { version = "0.8", features = ["ws"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace"] }
tokio-stream = "0.1"

# WebSocket
tokio-tungstenite = "0.26"

# Vector stores
qdrant-client = "1.13"

# SQLite with FTS5
rusqlite = { version = "0.32", features = ["bundled"] }

# LanceDB
lancedb = "0.20"

# PostgreSQL with pgvector
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "uuid", "chrono", "json"] }

# Milvus
milvus = "0.1"

# AI providers
async-openai = "0.28"

# Token counting
tiktoken-rs = "0.6"

# Testing
tokio-test = "0.4"
mockall = "0.13"

# WASM
wasmtime = "25.0"

# Internal crates
openclaw-core = { path = "crates/openclaw-core" }
openclaw-ai = { path = "crates/openclaw-ai" }
openclaw-memory = { path = "crates/openclaw-memory" }
openclaw-vector = { path = "crates/openclaw-vector" }
openclaw-channels = { path = "crates/openclaw-channels" }
openclaw-agent = { path = "crates/openclaw-agent" }
openclaw-voice = { path = "crates/openclaw-voice" }
openclaw-server = { path = "crates/openclaw-server" }
openclaw-canvas = { path = "crates/openclaw-canvas" }
openclaw-browser = { path = "crates/openclaw-browser" }
openclaw-sandbox = { path = "crates/openclaw-sandbox" }
openclaw-tools = { path = "crates/openclaw-tools" }
openclaw-device = { path = "crates/openclaw-device" }
openclaw-security = { path = "crates/openclaw-security" }
openclaw-testing = { path = "crates/openclaw-testing" }

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
strip = true
panic = "abort"

[profile.release.package.regex]
opt-level = "z"

[profile.dev]
opt-level = 0
debug = true
