[package]
name = "openclaw-sandbox"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true

[features]
default = ["native"]
sandbox-wasm = []
sandbox-docker = []
native = []

[dependencies]
openclaw-core.workspace = true
openclaw-security.workspace = true
tokio.workspace = true
async-trait.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
anyhow.workspace = true
tracing.workspace = true
chrono.workspace = true
uuid.workspace = true
futures.workspace = true
regex.workspace = true

wasmtime = "25.0"
bollard = "0.18"
sha2 = "0.10"
base64 = { version = "0.22", features = ["std"] }
