[package]
name = "openclaw-server"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
openclaw-core.workspace = true
openclaw-ai.workspace = true
openclaw-memory.workspace = true
openclaw-vector.workspace = true
openclaw-security.workspace = true
openclaw-channels.workspace = true
openclaw-canvas.workspace = true
openclaw-browser.workspace = true
openclaw-agent.workspace = true
openclaw-device.workspace = true
openclaw-voice.workspace = true
openclaw-tools.workspace = true
tokio.workspace = true
tokio-stream.workspace = true
async-trait.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
thiserror.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
config.workspace = true
axum.workspace = true
tower.workspace = true
tower-http.workspace = true
futures.workspace = true
uuid.workspace = true
chrono.workspace = true
base64.workspace = true
rand.workspace = true

[features]
default = []
per_session_memory = ["testing"]
testing = ["openclaw-agent/testing"]
lancedb = ["openclaw-vector/lancedb"]
qdrant = ["openclaw-vector/qdrant"]
pgvector = ["openclaw-vector/pgvector"]
milvus = ["openclaw-vector/milvus"]

[dev-dependencies]
tempfile.workspace = true
