[package]
name = "openclaw-tools"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true

[features]
default = ["native"]
wasm = []
native = []

[dependencies]
openclaw-core.workspace = true
openclaw-browser.workspace = true
openclaw-sandbox.workspace = true
tokio.workspace = true
async-trait.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
anyhow.workspace = true
tracing.workspace = true
chrono.workspace = true
uuid.workspace = true
futures.workspace = true
reqwest.workspace = true
sha2 = "0.10"
hex = "0.4"
zip = "0.6"
tempfile.workspace = true
cron = "0.12"
urlencoding = "2.1"
