[package]
name = "openclaw-vector"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
openclaw-core.workspace = true
tokio.workspace = true
async-trait.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
anyhow.workspace = true
tracing.workspace = true
chrono.workspace = true
uuid.workspace = true
# lancedb.workspace = true  # 暂时移除
# qdrant-client.workspace = true  # 暂时移除
rusqlite.workspace = true
lancedb.workspace = true
qdrant-client.workspace = true
sqlx.workspace = true
milvus.workspace = true

[features]
default = []
lancedb = []
qdrant = []
pgvector = []
milvus = []
sqlite = []
